use long as frame id in database